@@ -22,8 +22,12 @@
 			<TABLE cellpadding="5" cellspacing="0" WIDTH="100%">
 				<TR class="dark">
 					<TD WIDTH="92%" NOWRAP class="fleftu"><B>{t}Liability:{/t}</B></TD>
-					<TD WIDTH="1%" NOWRAP class="fbt" ALIGN="RIGHT">{t}Value:{/t}</TD>
-					<TD WIDTH="1%" NOWRAP class="fbt" ALIGN="RIGHT">{t}Discount:{/t}</TD>
+					<TD WIDTH="1%" NOWRAP class="fbt" ALIGN="RIGHT">
+						{if $_config.privileges.finances_management|chkconfig || 4adminuser}{t}Value:{/t}{/if}
+					</TD>
+					<TD WIDTH="1%" NOWRAP class="fbt" ALIGN="RIGHT">
+						{if $_config.privileges.finances_management|chkconfig || $adminuser}{t}Discount:{/t}{/if}
+					</TD>
 					<TD WIDTH="1%" NOWRAP class="fbt">{t}Accounting:{/t}</TD>
 					<TD WIDTH="1%" NOWRAP class="fbt" ALIGN="RIGHT">{t}Downceil:{/t}</TD>
 					<TD WIDTH="1%" NOWRAP class="fbt" ALIGN="RIGHT">{t}Upceil:{/t}</TD>
@@ -48,10 +52,10 @@
 						{if $a.nodes}({foreach from=$a.nodes item=item key=key}{$item.name}{if $key+1<sizeof($a.nodes)}, {/if}{/foreach}){/if}
 					</TD>
 					<TD NOWRAP ALIGN="RIGHT" OnClick="return self.location.href='?m=customerassignmentedit&id={$a.id}'">
-					    {$a.value|money_format}
+					    {if $_config.privileges.finances_management|chkconfig || $adminuser}{$a.value|money_format}{/if}
 					</TD>
 					<TD ALIGN="RIGHT" OnClick="return self.location.href='?m=customerassignmentedit&id={$a.id}'">
-					    {if $a.discount!=0}{$a.discount}%{else}-{/if}
+					    {if $_config.privileges.finances_management|chkconfig || $adminuser}{if $a.discount!=0}{$a.discount}%{else}-{/if}{/if}
 					</TD>
 					<TD NOWRAP OnClick="return self.location.href='?m=customerassignmentedit&id={$a.id}'">{$a.payday}</TD>
 					<TD NOWRAP ALIGN="RIGHT" OnClick="return self.location.href='?m=customerassignmentedit&id={$a.id}'">
@@ -87,8 +91,16 @@
 				{/foreach}
 				<TR class="light">
 					<TD CLASS="ftop" ALIGN="RIGHT"><B>{t}Total:{/t}</B></TD>
-					<TD CLASS="ftop" NOWRAP ALIGN="RIGHT">{sum array=$assignments column="real_value" string_format=$LANGDEFS.$_language.money_format}</TD>
-					<TD CLASS="ftop" NOWRAP ALIGN="LEFT">({sum array=$assignments column="real_disc_value" string_format=$LANGDEFS.$_language.money_format})</TD>
+					<TD CLASS="ftop" NOWRAP ALIGN="RIGHT">
+						{if $_config.privileges.finances_management|chkconfig || $adminuser}
+						{sum array=$assignments column="real_value" string_format=$LANGDEFS.$_language.money_format}
+						{/if}
+					</TD>
+					<TD CLASS="ftop" NOWRAP ALIGN="LEFT">
+						{if $_config.privileges.finances_management|chkconfig || $adminuser}
+						({sum array=$assignments column="real_disc_value" string_format=$LANGDEFS.$_language.money_format})
+						{/if}
+					</TD>
 					<TD CLASS="FTOP">&nbsp;</TD>
 					<TD CLASS="ftop" NOWRAP ALIGN="RIGHT">{sum array=$assignments column="real_downceil" assign=downceilsum}{if $downceilsum}{$downceilsum} kbit/s{/if}</TD>
 					<TD CLASS="ftop" NOWRAP ALIGN="RIGHT">{sum array=$assignments column="real_upceil" assign=upceilsum}{if $upceilsum}{$upceilsum} kbit/s{/if}</TD>
