@@ -13,8 +13,10 @@
 			{t}Services:{/t}
 		</TD>
 		<TD width="1%" class="fbt" ALIGN="right" VALIGN="TOP" NOWRAP>
+		{if $_config.privileges.finances_management|chkconfig || $adminuser}
 			<a href="?m={$layout.module}&s={$listdata.state}&o=balance{if $listdata.direction eq "asc" && $listdata.order eq "balance"},desc{/if}">{t}Balance:{/t}</A>&nbsp;{if $listdata.order eq "balance"}<IMG SRC="img/{if $listdata.direction eq "desc"}asc{else}desc{/if}_order.gif" alt="">{/if}<BR>
 			<a href="?m={$layout.module}&s={$listdata.state}&o=tariff{if $listdata.direction eq "asc" && $listdata.order eq "tariff"},desc{/if}">{t}Subscription:{/t}</A>&nbsp;{if $listdata.order eq "tariff"}<IMG SRC="img/{if $listdata.direction eq "desc"}asc{else}desc{/if}_order.gif" alt="">{/if}
+		{/if}
 		</TD>
 		<TD width="1%" align="right" class="frightu">
 			<NOBR><B>{t a=$listdata.total}Total: $a{/t}</B></NOBR>
@@ -34,8 +36,10 @@
 					<OPTION VALUE="1"{if $listdata.state eq 1} SELECTED{/if}>{t}interested<!plural>{/t}</OPTION>
 					<OPTION VALUE="4"{if $listdata.state eq 4} SELECTED{/if}>{t}deleted<!plural>{/t}</OPTION>
 					<OPTION VALUE="5"{if $listdata.state eq 5} SELECTED{/if}>{t}disconnected<!plural>{/t}</OPTION>
+					{if ($_config.privileges.finances_management|chkconfig && !$_config.privileges.hide_summaries|chkconfig) || $adminuser}
 					<OPTION VALUE="6"{if $listdata.state eq 6} SELECTED{/if}>{t}in debt{/t}</OPTION>
 					<OPTION VALUE="11"{if $listdata.state eq 11} SELECTED{/if}>{t}in debt above 100%{/t}</OPTION>
+					{/if}
 					<OPTION VALUE="7"{if $listdata.state eq 7} SELECTED{/if}>{t}online{/t}</OPTION>
 					<OPTION VALUE="8"{if $listdata.state eq 8} SELECTED{/if}>{t}without group{/t}</OPTION>
 					<OPTION VALUE="9"{if $listdata.state eq 9} SELECTED{/if}>{t}without tariff{/t}</OPTION>
@@ -93,7 +97,9 @@
 			{/if}
 		</TD>
 		<TD align="right" valign="top" NOWRAP>
+			{if $_config.privileges.finances_management|chkconfig || $adminuser}
 			<NOBR><IMG src="img/empty.gif" width="1" height="16" ALT="">{if $customerlist[customerlist].balance < 0}<font class="alert">{/if}{$customerlist[customerlist].balance|money_format}{if $customerlist[customerlist].balance < 0}</FONT>{/if}<BR><IMG src="img/empty.gif" width="1" height="16" ALT=""><FONT CLASS="blend">{$customerlist[customerlist].tariffvalue|money_format}</FONT></NOBR>
+			{/if}
 		</TD>		
 		<TD align="right" class="fright">
 			<NOBR>
@@ -155,12 +161,16 @@
 			&nbsp;
 		</TD>
 		<TD class="fbt" align="right">
+			{if ($_config.privileges.finances_management|chkconfig && !$_config.privileges.hide_summaries|chkconfig) || $adminuser}
 			<B>{t}Outstandings{/t}:<BR>
 			{t}Overcharges{/t}:</B>
+			{/if}
 		</TD>
 		<TD class="fbt" align="right" nowrap>
+			{if ($_config.privileges.finances_management|chkconfig && !$_config.privileges.hide_summaries|chkconfig) || $adminuser}
 			<B>{$listdata.below|money_format}<BR>
 			{$listdata.over|money_format}</B>
+			{/if}
 		</TD>
 		<TD class="frightu" align="right" valign="top">
 			<B>{t}Total:{/t} {$listdata.total}</B>	
